2008-06-24  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-index.[ch]:
	* src/tracker-indexer/tracker-indexer.c: Added a timer and a count
	so we know when we are finished how long it took and how many
	items were indexed. Also, don't flush after every item, flush
	every 10 seconds or so.

2008-06-24  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-monitor.[ch]: Now we detect the backend
	used for monitoring and set the limits accordingly. We also now
	provide the warning (if we reach the limit) only once and make the
	number of monitors we couldn't add available by API.

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-xesam-manager.c:
	* src/libtracker-db/tracker-db-manager.c:
	* data/sqlite-stored-procs.sql:

	Fix for a warning about table Events not existing

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-main.c:
	* src/libtracker-db/tracker-db-manager.c:
	* src/libtracker-db/tracker-db-manager.h:

	tracker_db_manager_shutdown must not remove the directory in tmp with
	cache.db in case the indexer calls it.

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	src/tracker-indexer/tracker-indexer.c: The table Events for
	tracker_db_create_event only exists in cache.db, not in common.db,
	therefore patched it to use a priv->cache instead of priv->common

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Normalizing attachments (for
	example cache.db was attached twice, which gave warnings).

2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Fix for "database cache is
	already in use" warning (removing a hack that is no longer needed,
	this hack was put in place because before fixes that were done today
	was tracker-indexer removing cache.db after some time. The hack caused